--- a/sample.env
+++ b/sample.env
@@ -15,3 +15,27 @@ LOGLEVEL=debug
 # Default: /app/db/database/snibox.sqlite3
 ######################################################################################################################################
 #DATABASE=
+
+######################################################################################################################################
+# REDIS
+######################################################################################################################################
+REDIS_URL=redis://backend-cache:6379/0
+#REDIS_HOST=backend-cache
+#REDIS_PORT=6379
+
+######################################################################################################################################
+# EMAIL
+######################################################################################################################################
+MAILGUN_SMTP_PORT=587
+MAILGUN_SMTP_SERVER=smtp.mailgun.org
+MAILGUN_SMTP_LOGIN=
+MAILGUN_SMTP_PASSWORD=
+DOMAIN= # Domain used to access the app
+
+######################################################################################################################################
+# CONFIGURATION SERVER
+# RAILS_SERVE_STATIC_FILES Apache or NGINX already handles this.
+# FORCE_SSL set to false by default
+######################################################################################################################################
+RAILS_SERVE_STATIC_FILES=false
+FORCE_SSL=true
